--- a/bicicletas.html
+++ b/bicicletas.html
@@ -15,7 +15,8 @@
         rel="stylesheet">
     <link rel="icon" href="./favicon.svg" type="image/svg+xml">
     <link rel="preload" href="./css/style.min.css" as="style">
-    <link rel="stylesheet" href="./css/style.min.css"><script>document.documentElement.classList.add('js');</script>
+    <link rel="stylesheet" href="./css/style.min.css">
+    <script>document.documentElement.classList.add('js');</script>
   </header>
 
 <body id="bicicletas">
